syntax = "proto3";

message MapChunk {
  int32 id = 1;
  
  message Entity {
    string type = 0;
    // entity position
    repeated float position = 1;
    // JSON.stringify result of {...rest }
    string rest = 2;
  }
  repeated Entity entities = 2;
}
